--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 *.dll
 *.so
 *.dylib
+*.txt
 
 # Test binary, built with `go test -c`
 *.test
@@ -15,7 +16,8 @@
 *.out
 
 # Dependency directories (remove the comment below to include it)
-# vendor/
+.idea
+inputs/
 
 # Go workspace file
 go.work
