--- a/.gitignore
+++ b/.gitignore
@@ -17,8 +17,7 @@
 
 # Dependency directories (remove the comment below to include it)
 .idea
-inputs\
-Inputs\
+input
 
 # Go workspace file
 go.work
