--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,8 @@
 *.out
 
 # Dependency directories (remove the comment below to include it)
-.idea
+.idea/
+*.sln.iml
 input
 
 # Go workspace file
